--- a/code/Glasquare/src/main/AndroidManifest.xml
+++ b/code/Glasquare/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".activity.CheckInActivity"/>
         <activity android:name=".activity.LoginActivity"/>
         <activity android:name=".activity.QrScanActivity"/>
+        <activity android:name=".activity.UsersActivity"/>
     </application>
 
 </manifest>
